feat: UserRegister EP
