# dtos/users/requests/register_user_request_dto.go
@@ -1,0 +1,7 @@
+package requests
+
+type RegisterUserRequestDto struct {
+    Name     string `json:"name" validate:"required"`
+    Email    string `json:"email" validate:"required,email"`
+    Password string `json:"password" validate:"required,min=8"`
+}
